Nested flex layout issues with child 100% height in Safari

--- a/docs/docs.css
+++ b/docs/docs.css
@@ -15,15 +15,18 @@ body > [ui-view] {
 body > [ui-view] > main {
     flex: 1 0;
     overflow: hidden;
+	position: relative;
 }
 
 body > [ui-view] > main > [ui-view] {
     display: flex;
-    flex: 1 0;
     flex-flow: row nowrap;
-    height: 100%;
-    position: relative;
+    position: absolute;
     overflow: hidden;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
 }
 
 body > [ui-view] > main > [ui-view] > [ui-view] {
